--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "i18next": "^23.12.3",
@@ -21,7 +22,8 @@
     "react-native-localize": "^3.2.1",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.34.0",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-version-info": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
