--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "i18next": "^23.12.3",
@@ -19,9 +20,12 @@
     "react-i18next": "^15.0.1",
     "react-native": "0.74.5",
     "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "^2.18.1",
     "react-native-localize": "^3.2.1",
+    "react-native-reanimated": "^3.15.0",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.34.0",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-version-info": "^1.1.1"
   },
@@ -34,6 +38,7 @@
     "@react-native/metro-config": "0.74.87",
     "@react-native/typescript-config": "0.74.87",
     "@types/react": "^18.2.6",
+    "@types/react-native-sqlite-storage": "^6.0.5",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
