--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,6 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+.env
+android/app/src/main/assets/database/ivycpg_v19.sqlite
+smartsell/assets/database/ivycpg_v19.sqlite
