--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-APP_LOGIN_BG=../../asserts/image.png
-APP_LOGO_BG=../../asserts/ivy_mobility_logo.png
+APP_LOGIN_BG=../../assets/image.png
+APP_LOGO_BG=../../assets/ivy_mobility_logo.png
+DATABASE_NAME=ivycpg_v19.sqlite
