--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "react": "18.2.0",
     "react-axios": "^2.0.6",
     "react-i18next": "^15.0.1",
-    "react-native": "0.74.5",
+    "react-native": "^0.74.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-localize": "^3.2.1",
     "react-native-reanimated": "^3.15.0",
+    "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.34.0",
     "react-native-sqlite-storage": "^6.0.1",
