--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-native": "0.74.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.18.1",
+    "react-native-get-location": "^5.0.0",
     "react-native-localize": "^3.2.1",
+    "react-native-permissions": "^4.1.5",
     "react-native-reanimated": "^3.15.0",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.34.0",
