--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "i18next": "^23.12.3",
     "react": "18.2.0",
     "react-axios": "^2.0.6",
@@ -29,7 +30,8 @@
     "react-native-screens": "^3.34.0",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-version-info": "^1.1.1"
+    "react-native-version-info": "^1.1.1",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
