--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react": "18.2.0",
     "react-axios": "^2.0.6",
     "react-i18next": "^15.0.1",
-    "react-native": "0.74.5",
+    "react-native": "^0.74.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.18.1",
