--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-localize": "^3.2.1",
+    "react-native-maps": "^1.18.0",
     "react-native-permissions": "^4.1.5",
     "react-native-reanimated": "^3.15.0",
     "react-native-safe-area-context": "^4.10.8",
