--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.18.1",
+    "react-native-gifted-charts": "^1.4.32",
     "react-native-localize": "^3.2.1",
     "react-native-maps": "^1.18.0",
     "react-native-permissions": "^4.1.5",
