--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
+  <uses-permission android:name="android.permission.CAMERA" />
+  
   <application android:name=".MainApplication" android:label="@string/app_name" android:icon="@mipmap/ic_launcher" android:allowBackup="false" android:theme="@style/AppTheme">
 
     <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyAIpsG5LZglGvtU-r-INCrIORgkXuTUZRo"/>
