--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.34.0",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-svg": "^15.7.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-version-info": "^1.1.1",
     "react-redux": "^9.1.2"
