--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-svg": "^15.7.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-version-info": "^1.1.1",
+    "react-native-vision-camera": "^4.5.3",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
